<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.MainActivity">
    
    
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="500dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        >

        <LinearLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:text="@string/welcome_app"
                android:textAllCaps="true"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                app:layout_constraintTop_toTopOf="parent"
                android:hint="@string/hint_username"
                app:boxCornerRadiusBottomEnd="5dp"
                app:boxCornerRadiusBottomStart="5dp"
                app:boxCornerRadiusTopEnd="5dp"
                app:boxCornerRadiusTopStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:backgroundTint="@android:color/holo_orange_light"
                app:boxStrokeColor="@android:color/black"
                android:id="@+id/text_username"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:id="@+id/edt_username" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:id="@+id/text_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                app:boxCornerRadiusTopStart="5dp"
                app:boxCornerRadiusTopEnd="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                app:passwordToggleEnabled="true"
                android:layout_marginStart="5dp"
                app:boxCornerRadiusBottomStart="5dp"
                app:boxCornerRadiusBottomEnd="5dp"
                app:boxStrokeColor="@android:color/black"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edt_password"
                    android:inputType="textVisiblePassword" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="5dp"
                android:id="@+id/btn_login"
                app:cardCornerRadius="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                app:cardBackgroundColor="@android:color/holo_red_light"
                android:clickable="true"
                android:focusable="true"
                >

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Login"
                    android:padding="10dp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="20sp" />

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>
        


    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>